// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing AdditionalTest 1`] = `
<Styled(MuiBox)
  className="actionBar"
  component="div"
  data-qa="snapshot-qa"
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className="actionGridLeft"
    container={true}
    direction="row"
    justify="space-between"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      key="1"
      xs={6}
    >
      <div
        data-qa="action-bar-custom-title"
      >
        text
      </div>
    </WithStyles(ForwardRef(Grid))>
    <When
      condition={true}
    >
      <WithStyles(ForwardRef(Grid))
        className="actionGridRight"
        item={true}
        key="2"
        sm={6}
        xs={5}
      >
        <Memo(ForwardRef)
          color="primary"
          data-qa="action-bar-button"
          disabled={false}
          label="label"
          onClick={[Function]}
          variant="contained"
        />
      </WithStyles(ForwardRef(Grid))>
    </When>
  </WithStyles(ForwardRef(Grid))>
</Styled(MuiBox)>
`;

exports[`Snapshot Testing Required Props 1`] = `
<Styled(MuiBox)
  className="actionBar"
  component="div"
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className="actionGridLeft"
    container={true}
    direction="row"
    justify="space-between"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      key="1"
      xs={6}
    >
      <WithStyles(ForwardRef(Typography))
        className="actionHeader"
        color="textPrimary"
        data-qa="action-bar-title"
        variant="h1"
      >
        42
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <When
      condition={false}
    >
      <WithStyles(ForwardRef(Grid))
        className="actionGridRight"
        item={true}
        key="2"
        sm={6}
        xs={5}
      >
        <Memo(ForwardRef)
          color="primary"
          data-qa="action-bar-button"
          disabled={false}
          onClick={[Function]}
          variant="contained"
        />
      </WithStyles(ForwardRef(Grid))>
    </When>
  </WithStyles(ForwardRef(Grid))>
</Styled(MuiBox)>
`;

exports[`Snapshot Testing With Button 1`] = `
<Styled(MuiBox)
  className="actionBar"
  component="div"
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className="actionGridLeft"
    container={true}
    direction="row"
    justify="space-between"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      key="1"
      xs={6}
    >
      <div
        data-qa="action-bar-custom-title"
      >
        text
      </div>
    </WithStyles(ForwardRef(Grid))>
    <When
      condition={true}
    >
      <WithStyles(ForwardRef(Grid))
        className="actionGridRight"
        item={true}
        key="2"
        sm={6}
        xs={5}
      >
        <Memo(ForwardRef)
          color="primary"
          data-qa="action-bar-button"
          disabled={false}
          label="label"
          onClick={[Function]}
          variant="contained"
        />
      </WithStyles(ForwardRef(Grid))>
    </When>
  </WithStyles(ForwardRef(Grid))>
</Styled(MuiBox)>
`;
